Image Block - bug fixed default align frontend view not working properly

--- a/src/blocks/image/style.scss
+++ b/src/blocks/image/style.scss
@@ -1,6 +1,8 @@
 .wp-block-uagb-image {
-	display: inline-block;
-	max-width: 100%;
+	&--align-none {
+		margin-left: auto;
+		margin-right: auto;
+	}
 	&--align-left,
 	&--align-right,
 	&--align-center {
